--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node --experimental-strip-types src/main.ts",
 		"dev": "node --experimental-strip-types --watch src/main.ts"
 	},
 	"keywords": [],
