--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@eslint/js": "^9.26.0",
+		"@types/express": "^5.0.1",
 		"@types/node": "^22.15.17",
 		"eslint": "^9.26.0",
 		"globals": "^16.1.0",
@@ -24,6 +25,7 @@
 		"@grammyjs/conversations": "^2.1.0",
 		"@grammyjs/router": "^2.0.0",
 		"dotenv": "^16.5.0",
+		"express": "^5.1.0",
 		"grammy": "^1.36.1",
 		"telegraf": "^4.16.3"
 	},
